# modula

./: .buildinfo  .gitignore  CNAME  README.md  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: bad-scaling.doctree  environment.pickle  faq.doctree  golden-rules.doctree  history.doctree  index.doctree
.doctrees/algorithms/: newton-schulz.doctree
.doctrees/examples/: README.doctree  hello-gpt.doctree  hello-mnist.doctree  hello-world.doctree  weight-erasure.doctree
.doctrees/intro/: metrized-deep-learning.doctree  quickstart.doctree  reading-list.doctree  whats-in-a-norm.doctree
.doctrees/theory/: module.doctree  vector.doctree
_sources/algorithms/: newton-schulz.rst.txt
_sources/intro/: quickstart.rst.txt  reading-list.rst.txt
_sources/theory/: module.rst.txt
algorithms/manifold/: index.html
algorithms/newton-schulz/: index.html
bad-scaling/: index.html
docs/source/: index.rst
examples/: gpt.py  train-mlp.py  weight-erasure.ipynb
examples/README/: index.html
examples/hello-gpt/: index.html
examples/hello-mnist/: index.html
examples/hello-world/: index.html
examples/weight-erasure/: index.html
faq/: index.html
genindex/: index.html
golden-rules/: index.html
history/: index.html
intro/metrized-deep-learning/: index.html
intro/quickstart/: index.html
intro/reading-list/: index.html
intro/whats-in-a-norm/: index.html
modula/: __init__.py  abstract.py  atom.py  bond.py
search/: index.html
theory/atom/: index.html
theory/bond/: index.html
theory/compound/: index.html
theory/module/: index.html
(+24 files in other folders)
